feat: faq section withouot accordion

--- a/src/style.css
+++ b/src/style.css
@@ -63,3 +63,20 @@
     }
   }
 }
+
+.faq-bg {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(var(--orange-2));
+    transform-origin: top left;
+    transform: skewY(-3deg);
+    z-index: -1;
+  }
+}
